--- a/recs-client/index.html
+++ b/recs-client/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+        <link rel="icon" type="image/svg+xml" href="/knight.svg" />
+        <link rel="icon" type="image/png" href="./knight.svg" />
+        <link rel="apple-touch-icon" href="./knight.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Dojo React Vite</title>
+        <title>Dojo RL Chess</title>
     </head>
     <body>
         <div id="root"></div>
